--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FF3772E7</color>
     <color name="gray">#FFAEAFB4</color>
+    <color name="acid">#FF00FF00</color>
 </resources>
