--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,61 +16,25 @@
         android:paddingBottom="@dimen/big_padding"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="@dimen/title_text_size" />
+        android:textSize="@dimen/title_text_size"
+        android:textFontWeight="@integer/text_weight_500"
+        android:fontFamily="@font/ys_display_medium"/>
 
     <Button
         android:id="@+id/btnSearch"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/big_padding"
-        android:layout_marginVertical="@dimen/smallest_padding"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/search"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/title_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black" />
+        style="@style/mainActivityButton"/>
 
     <Button
         android:id="@+id/btnMediateka"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/big_padding"
-        android:layout_marginVertical="@dimen/smallest_padding"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/mediateka"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/title_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/mediateka"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black" />
+        style="@style/mainActivityButton"/>
 
     <Button
         android:id="@+id/btnSettings"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/big_padding"
-        android:layout_marginTop="@dimen/smallest_padding"
-        android:layout_marginBottom="@dimen/big_padding"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        android:onClick="btnSettingsOnClick"
         android:text="@string/settings"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/title_text_size"
-        app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black" />
+        style="@style/mainActivityButton"/>
 </LinearLayout>
