--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,32 +7,24 @@
 
     <TextView
         android:id="@+id/tvGoBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="@dimen/medium_padding"
-        android:paddingHorizontal="@dimen/medium_padding"
-        android:paddingTop="@dimen/medium_padding"
-        android:paddingBottom="32dp"
         android:text="@string/settings"
-        android:textColor="@color/black"
-        android:textSize="@dimen/title_text_size"
-        android:foreground="?attr/selectableItemBackground"
-        app:drawableStartCompat="@drawable/arrow_back" />
+        style="@style/titleWithBack"
+        />
+    
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/big_padding"
-        android:paddingVertical="@dimen/biggest_padding">
+        style="@style/settingsFrameLayout"
+        android:id="@+id/frameDarkTheme">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/dark_theme"
-            android:textColor="@color/black"
-            android:textSize="@dimen/items_text_size" />
+            style="@style/settingsTextView" />
 
         <Switch
+            android:id="@+id/switchDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end" />
@@ -40,71 +32,48 @@
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/big_padding"
-        android:paddingVertical="@dimen/biggest_padding">
+        style="@style/settingsFrameLayout"
+        android:id="@+id/frameShareApp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/share_app"
-            android:textColor="@color/black"
-            android:textSize="@dimen/items_text_size" />
+            style="@style/settingsTextView" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:contentDescription="@string/share_app"
             android:src="@drawable/share"
-            app:tint="@color/gray" />
+            style="@style/settingsImageView"/>
+
 
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/big_padding"
-        android:paddingVertical="@dimen/biggest_padding">
+        style="@style/settingsFrameLayout"
+        android:id="@+id/frameSupportContact">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/write_to_support"
-            android:textColor="@color/black"
-            android:textSize="@dimen/items_text_size" />
+            style="@style/settingsTextView" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:contentDescription="@string/write_to_support"
             android:src="@drawable/support"
-            app:tint="@color/gray" />
+            style="@style/settingsImageView"/>
 
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/big_padding"
-        android:paddingVertical="@dimen/biggest_padding">
+        style="@style/settingsFrameLayout"
+        android:id="@+id/frameUserLicense">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/user_license"
-            android:textColor="@color/black"
-            android:textSize="@dimen/items_text_size" />
+            style="@style/settingsTextView" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:contentDescription="@string/user_license"
             android:src="@drawable/arrow_forward"
-            app:tint="@color/gray" />
+            style="@style/settingsImageView"/>
 
     </FrameLayout>
 
