--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,28 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Screen background -->
+        <item name="android:background">@color/black</item>
+
+        <!-- Text color -->
+        <item name="android:textColor">@color/white</item>
+
+        <!-- Button  -->
     </style>
 </resources>
+
+
+    <!--
+    <item name="colorPrimary">@color/purple_200</item>
+    <item name="colorPrimaryVariant">@color/purple_700</item>
+    <item name="colorOnPrimary">@color/black</item>
+
+    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorSecondaryVariant">@color/teal_200</item>
+    <item name="colorOnSecondary">@color/black</item>
+
+    <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    -->
+    <!-- Primary brand color. -->
+    <!-- Secondary brand color. -->
+    <!-- Status bar color. -->
