--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="medium_padding">12dp</dimen>
     <dimen name="big_padding">16dp</dimen>
     <dimen name="biggest_padding">20dp</dimen>
-    <!-- Text sizes -->
+    <!-- Text sizes and weight -->
     <dimen name="items_text_size">16sp</dimen>
     <dimen name="title_text_size">22sp</dimen>
 </resources>
