--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,22 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blue"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    style="@style/mainScreenLayout">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/small_padding"
+        android:paddingHorizontal="@dimen/small_padding"
         android:paddingTop="@dimen/medium_padding"
         android:paddingBottom="@dimen/big_padding"
         android:text="@string/app_name"
-        android:textColor="@color/white"
         android:textSize="@dimen/title_text_size"
         android:textFontWeight="@integer/text_weight_500"
+        android:textColor="@color/white"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/ys_display_medium"/>
 
     <Button
