--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">@color/lightBlack</item>
     </style>
 
     <style name="mainActivityButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -25,7 +25,6 @@
         <item name="iconGravity">textStart</item>
         <item name="iconPadding">@dimen/icon_padding</item>
         <item name="iconTint">@color/black</item>
-        <item name="android:drawablePadding">24dp</item>
     </style>
 
     <style name="titleWithBack">
@@ -40,7 +39,7 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
         <item name="drawableStartCompat">@drawable/arrow_back</item>
-        <item name="android:drawableTint">@color/lightBlack</item>
+        <item name="android:drawableTint">@color/white</item>
     </style>
 
     <style name="settingsTextView" parent="Widget.MaterialComponents.TextView">
@@ -55,7 +54,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">end</item>
-        <item name="tint">@color/gray</item>
+        <item name="tint">@color/white</item>
     </style>
 
     <style name="settingsFrameLayout">
@@ -72,15 +71,15 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_marginStart">12dp</item>
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:tint">@color/gray</item>
+        <item name="android:tint">@color/lightBlack</item>
     </style>
 
     <style name="searchField">
-        <item name="android:background">@drawable/rounded_shape</item>
+        <item name="android:background">@drawable/rounded_shape_dark</item>
     </style>
 
     <style name="searchEditText">
-        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:textColorHint">@color/lightBlack</item>
     </style>
 
 </resources>
