--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,28 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- Screen background -->
-        <item name="android:background">@color/black</item>
-
-        <!-- Text color -->
+        <item name="android:background">@color/lightBlack</item>
         <item name="android:textColor">@color/white</item>
-
-        <!-- Button  -->
+        <item name="colorSecondary">@color/blue</item>
+        <item name="android:statusBarColor">@color/lightBlack</item>
     </style>
 </resources>
-
-
-    <!--
-    <item name="colorPrimary">@color/purple_200</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
-    <item name="colorOnPrimary">@color/black</item>
-
-    <item name="colorSecondary">@color/teal_200</item>
-    <item name="colorSecondaryVariant">@color/teal_200</item>
-    <item name="colorOnSecondary">@color/black</item>
-
-    <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-    -->
-    <!-- Primary brand color. -->
-    <!-- Secondary brand color. -->
-    <!-- Status bar color. -->
