sprint #9 commit #3 исправление ошибок/замечаний:
1. кнопка "Очистить" поверх поля ввода в одном FrameLayout
2. companion object перенесён вниз класса
3. установка видимости кнопки "Очистить" реализовано через свойство-расширение ivClear.isVisible = s.isNullOrEmpty().not()
4. исправлено переопределение тёмной темы на switchDark.isChecked = isDarkTheme()
5. в вёрстке ActivitySearch убран Space, заменён на marginTop в LinearLayout
6. свойства поля поиска etSearch вынесены в стиль @style/searchEditText

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,45 +10,40 @@
 
     <TextView
         android:id="@+id/tvGoBack"
-        style="@style/titleWithBack"
-        android:text="@string/search" />
+        android:text="@string/search"
+        style="@style/titleWithBack" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
-
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
         style="@style/searchField">
 
         <ImageView
             android:layout_marginEnd="8dp"
             android:src="@drawable/search"
+            android:layout_gravity="start|center_vertical"
             style="@style/searchFieldImages"/>
 
         <EditText
             android:id="@+id/etSearch"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
+            android:layout_marginStart="36dp"
             android:hint="@string/search"
-            android:inputType="text"
-            android:lines="1"
-            android:textColor="@color/lightBlack"
-            android:background="@android:color/transparent"
             style="@style/searchEditText"/>
 
         <ImageView
             android:id="@+id/ivClear"
             android:layout_marginEnd="12dp"
+            android:layout_gravity="end|center_vertical"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
             android:visibility="gone"
             style="@style/searchFieldImages"/>
 
-    </LinearLayout>
+    </FrameLayout>
 
 
 </LinearLayout>
