--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_corner_radius">16dp</dimen>
+    <!-- Margin -->
+    <dimen name="margin8">8dp</dimen>
+    <dimen name="margin10">10dp</dimen>
+    <dimen name="margin12">12dp</dimen>
+    <dimen name="margin14">14dp</dimen>
+    <dimen name="margin16">16dp</dimen>
+    <dimen name="margin18">18dp</dimen>
     <!-- Padding -->
     <dimen name="icon_padding">8dp</dimen>
     <dimen name="smallest_padding">4dp</dimen>
@@ -9,6 +16,7 @@
     <dimen name="big_padding">16dp</dimen>
     <dimen name="biggest_padding">20dp</dimen>
     <!-- Text sizes and weight -->
+    <dimen name="small_text_size">11sp</dimen>
     <dimen name="items_text_size">16sp</dimen>
     <dimen name="title_text_size">22sp</dimen>
 </resources>
