--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,6 +85,40 @@
         <item name="android:lines">1</item>
         <item name="android:textColor">@color/lightBlack</item>
         <item name="android:background">@android:color/transparent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginStart">36dp</item>
+        <item name="android:paddingEnd">40dp</item>
+    </style>
+
+    <style name="searchTrackFirstTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin8</item>
+        <item name="android:layout_marginTop">@dimen/margin14</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textFontWeight">@integer/text_weight_400</item>
+        <item name="android:textSize">@dimen/items_text_size</item>
+    </style>
+
+    <style name="searchTrackSecondTitle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textFontWeight">@integer/text_weight_400</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
+    </style>
+
+    <style name="recyclerViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+        <item name="layoutManager">androidx.recyclerview.widget.LinearLayoutManager</item>
     </style>
 
 </resources>
