--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,7 +37,7 @@
             android:layout_marginEnd="12dp"
             android:layout_gravity="end|center_vertical"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:visibility="visible"
+            android:visibility="gone"
             style="@style/searchFieldImages"/>
 
     </FrameLayout>
