--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -89,6 +89,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginStart">36dp</item>
         <item name="android:paddingEnd">40dp</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="singleLine">true</item>
     </style>
 
     <style name="searchTrackFirstTitle">
@@ -111,6 +113,37 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textFontWeight">@integer/text_weight_400</item>
         <item name="android:textSize">@dimen/small_text_size</item>
+    </style>
+
+    <style name="placeHolderText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/placeholder_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">@integer/text_weight_400</item>
+        <item name="android:text">@string/no_internet</item>
+    </style>
+
+    <style name="placeHolderImage">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#00FFFFFF</item>
+        <item name="tint">@color/white</item>
+    </style>
+
+    <style name="refreshInternetButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:text">@string/refresh</item>
+        <item name="android:textColor">@color/lightBlack</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">@integer/text_weight_500</item>
+        <item name="android:textSize">14sp</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
 </resources>
