--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,5 +18,6 @@
     <!-- Text sizes and weight -->
     <dimen name="small_text_size">11sp</dimen>
     <dimen name="items_text_size">16sp</dimen>
+    <dimen name="placeholder_text_size">19sp</dimen>
     <dimen name="title_text_size">22sp</dimen>
 </resources>
