--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -32,12 +32,12 @@
             <TextView
                 android:id="@+id/tvArtistName"
                 style="@style/searchTrackSecondTitle"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_marginStart="@dimen/margin8"
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
-                tools:text="Artist Name" />
+                tools:text="Artist Name Artist Name Artist Name Artist Name Artist Name " />
 
             <ImageView
                 android:id="@+id/ivDot"
@@ -50,6 +50,7 @@
                 android:id="@+id/tvTrackTime"
                 style="@style/searchTrackSecondTitle"
                 android:layout_width="wrap_content"
+                android:layout_weight="0"
                 tools:text="Track time" />
 
         </LinearLayout>
