--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,21 +16,19 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
 
-    <FrameLayout
-        style="@style/settingsFrameLayout"
-        android:id="@+id/frameDarkTheme">
-
-        <TextView
-            android:text="@string/dark_theme"
-            style="@style/settingsTextView" />
-
-        <Switch
-            android:id="@+id/switchDark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end" />
-
-    </FrameLayout>
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switchDarkTheme"
+        android:text="@string/dark_theme"
+        android:textSize="@dimen/items_text_size"
+        android:textFontWeight="@integer/text_weight_400"
+        android:fontFamily="@font/ys_display_regular"
+        android:paddingHorizontal="@dimen/big_padding"
+        android:paddingVertical="@dimen/biggest_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        app:trackTint="@color/switch_track_selector"
+        app:thumbTint="@color/switch_thumb_selector"/>
 
     <FrameLayout
         style="@style/settingsFrameLayout"
@@ -40,9 +39,10 @@
             style="@style/settingsTextView" />
 
         <ImageView
+            style="@style/settingsImageView"
             android:contentDescription="@string/share_app"
             android:src="@drawable/share"
-            style="@style/settingsImageView"/>
+            tools:ignore="ImageContrastCheck" />
 
 
     </FrameLayout>
@@ -56,9 +56,10 @@
             style="@style/settingsTextView" />
 
         <ImageView
+            style="@style/settingsImageView"
             android:contentDescription="@string/write_to_support"
             android:src="@drawable/support"
-            style="@style/settingsImageView"/>
+            tools:ignore="ImageContrastCheck" />
 
     </FrameLayout>
 
@@ -71,9 +72,10 @@
             style="@style/settingsTextView" />
 
         <ImageView
+            style="@style/settingsImageView"
             android:contentDescription="@string/user_license"
             android:src="@drawable/arrow_forward"
-            style="@style/settingsImageView"/>
+            tools:ignore="ImageContrastCheck" />
 
     </FrameLayout>
 
