--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,12 +145,23 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:text">@string/refresh</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">@integer/text_weight_500</item>
         <item name="android:textSize">14sp</item>
         <item name="backgroundTint">@color/lightBlack</item>
+    </style>
+
+    <style name="searchHistoryTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin18</item>
+        <item name="android:layout_marginBottom">@dimen/margin12</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/placeholder_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">@integer/text_weight_500</item>
+        <item name="android:text">@string/search_history_title</item>
     </style>
 
 </resources>
