--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="lightBlack">#FF1A1B22</color>
+    <color name="lightBlack25">#401A1B22</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white25">#40FFFFFF</color>
     <color name="lightBlue">#FF9FBBF3</color>
     <color name="blue">#FF3772E7</color>
     <color name="lightGray">#FFE6E8EB</color>
