--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,8 +47,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="@dimen/icon_44"
+        android:layout_height="@dimen/icon_44"
         android:layout_gravity="center"
         android:layout_marginTop="140dp"
         android:indeterminateTint="@color/blue"
