--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -189,4 +189,10 @@
         <item name="android:background">@drawable/round_button_gray</item>
     </style>
 
+    <style name="tabLayout">
+        <item name="android:background">@color/white</item>
+        <item name="tabTextColor">@color/lightBlack</item>
+        <item name="tabIndicatorColor">@color/lightBlack</item>
+    </style>
+
 </resources>
