--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".mediateka.ui.mediateka.MediatekaActivity">
+    tools:context=".mediateka.ui.mediateka.MediatekaFragment">
 
     <TextView
         android:id="@+id/tvGoBack"
-        android:text="@string/mediateka"
-        style="@style/titleWithBack"/>
+        style="@style/titleWithBack"
+        android:text="@string/mediateka" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
+        style="@style/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed"
         app:tabIndicatorFullWidth="true"
-        style="@style/tabLayout"/>
+        app:tabMode="fixed" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
