--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,39 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".settings.ui.SettingsFragment">
 
     <TextView
         android:id="@+id/tvGoBack"
-        android:text="@string/settings"
         style="@style/titleWithBack"
-        />
-    
+        android:text="@string/settings" />
+
     <Space
         android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_height="20dp" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchDarkTheme"
-        android:text="@string/dark_theme"
-        android:textSize="@dimen/items_text_size"
-        android:textFontWeight="@integer/text_weight_400"
-        android:fontFamily="@font/ys_display_regular"
-        android:paddingHorizontal="@dimen/big_padding"
-        android:paddingVertical="@dimen/biggest_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        app:trackTint="@color/switch_track_selector"
-        app:thumbTint="@color/switch_thumb_selector"/>
+        android:fontFamily="@font/ys_display_regular"
+        android:paddingHorizontal="@dimen/big_padding"
+        android:paddingVertical="@dimen/biggest_padding"
+        android:text="@string/dark_theme"
+        android:textFontWeight="@integer/text_weight_400"
+        android:textSize="@dimen/items_text_size"
+        app:thumbTint="@color/switch_thumb_selector"
+        app:trackTint="@color/switch_track_selector" />
 
     <FrameLayout
-        style="@style/settingsFrameLayout"
-        android:id="@+id/frameShareApp">
+        android:id="@+id/frameShareApp"
+        style="@style/settingsFrameLayout">
 
         <TextView
-            android:text="@string/share_app"
-            style="@style/settingsTextView" />
+            style="@style/settingsTextView"
+            android:text="@string/share_app" />
 
         <ImageView
             style="@style/settingsImageView"
@@ -48,12 +48,12 @@
     </FrameLayout>
 
     <FrameLayout
-        style="@style/settingsFrameLayout"
-        android:id="@+id/frameSupportContact">
+        android:id="@+id/frameSupportContact"
+        style="@style/settingsFrameLayout">
 
         <TextView
-            android:text="@string/write_to_support"
-            style="@style/settingsTextView" />
+            style="@style/settingsTextView"
+            android:text="@string/write_to_support" />
 
         <ImageView
             style="@style/settingsImageView"
@@ -64,12 +64,12 @@
     </FrameLayout>
 
     <FrameLayout
-        style="@style/settingsFrameLayout"
-        android:id="@+id/frameUserLicense">
+        android:id="@+id/frameUserLicense"
+        style="@style/settingsFrameLayout">
 
         <TextView
-            android:text="@string/user_license"
-            style="@style/settingsTextView" />
+            style="@style/settingsTextView"
+            android:text="@string/user_license" />
 
         <ImageView
             style="@style/settingsImageView"
