--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="icon_44">44dp</dimen>
     <!-- Text sizes and weight -->
     <dimen name="small_text_size">11sp</dimen>
+    <dimen name="text_size_12">12sp</dimen>
     <dimen name="text_size_13">13sp</dimen>
     <dimen name="text_size_14">14sp</dimen>
     <dimen name="items_text_size">16sp</dimen>
