--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="margin16">16dp</dimen>
     <dimen name="margin18">18dp</dimen>
     <dimen name="margin24">24dp</dimen>
+    <dimen name="margin30">30dp</dimen>
+    <dimen name="margin32">32dp</dimen>
     <!-- Padding -->
     <dimen name="icon_padding">8dp</dimen>
     <dimen name="smallest_padding">4dp</dimen>
