--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,7 @@
         <item name="android:textFontWeight">@integer/text_weight_500</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:drawableTint">@color/lightBlack</item>
     </style>
 
     <style name="settingsTextView" parent="Widget.MaterialComponents.TextView">
@@ -214,6 +215,25 @@
 
     <style name="ActiveIndicatorStyle">
         <item name="itemIconTint">@color/blue</item>
+    </style>
+
+    <style name="TextLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/lightBlack</item>
+        <item name="hintTextColor">@color/text_layout_selector</item>
+        <item name="boxCornerRadiusBottomEnd">4dp</item>
+        <item name="boxCornerRadiusBottomStart">4dp</item>
+        <item name="boxCornerRadiusTopEnd">4dp</item>
+        <item name="boxCornerRadiusTopStart">4dp</item>
+        <item name="boxStrokeColor">@color/text_layout_selector</item>
+        <item name="boxStrokeWidth">1dp</item>
+    </style>
+
+    <style name="TextEditStyle">
+        <item name="android:defaultFocusHighlightEnabled">false</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">text</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
 </resources>
