--- a/app/src/main/res/drawable/bottom_sheet_shape.xml
+++ b/app/src/main/res/drawable/bottom_sheet_shape.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/button_back_selector" />
-    <corners android:radius="8dp" />
+    <solid android:color="?attr/colorPrimary" />
+    <corners
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
 </shape>
