--- a/app/src/main/res/drawable/bottom_sheet_shape.xml
+++ b/app/src/main/res/drawable/bottom_sheet_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="?attr/colorTertiary" />
     <corners
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
