--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -125,7 +125,7 @@
             app:layout_constraintBottom_toBottomOf="@id/ivPlayButton"
             app:layout_constraintStart_toStartOf="@id/left_guidLine"
             app:layout_constraintTop_toTopOf="@id/ivPlayButton"
-            tools:ignore="ImageContrastCheck" />
+            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
 
         <ImageButton
             android:id="@+id/ibFavoriteButton"
@@ -284,10 +284,29 @@
         app:behavior_peekHeight="360dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
+        <View
+            android:layout_width="50dp"
+            android:layout_height="4dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin8"
+            android:background="@drawable/bottom_sheet_divider" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bottom Sheet" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/add_to_playlist"
+            android:textColor="?attr/colorOnPrimary"
+            android:textSize="19sp" />
+
+        <Button
+            android:id="@+id/btnNewPlaylist"
+            style="@style/refreshInternetButton"
+            android:layout_marginTop="@dimen/margin16"
+            android:text="@string/new_playlist" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvPlaylists"
