--- a/app/src/main/res/layout/playlist_big_item.xml
+++ b/app/src/main/res/layout/playlist_big_item.xml
@@ -1,28 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/margin4"
+    android:layout_marginBottom="@dimen/margin16"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/playlist_list_shape"
+        android:clipToOutline="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/placeholder_big" />
+        android:src="@drawable/placeholder_big"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription,ImageContrastCheck,UnusedAttribute,VisualLintBounds" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="title" />
+        android:layout_marginTop="@dimen/margin4"
+        android:ellipsize="end"
+        android:fontFamily="@font/ys_display_regular"
+        android:textColor="?attr/colorOnPrimary"
+        android:textFontWeight="@integer/text_weight_400"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivPoster"
+        tools:text="Title"
+        tools:ignore="VisualLintBounds" />
 
     <TextView
         android:id="@+id/tvCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="description" />
+        android:fontFamily="@font/ys_display_regular"
+        android:textColor="?attr/colorOnPrimary"
+        android:textFontWeight="@integer/text_weight_400"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        tools:text="123 tracks"
+        tools:ignore="VisualLintBounds" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
