--- a/app/src/main/res/layout/playlist_small_item.xml
+++ b/app/src/main/res/layout/playlist_small_item.xml
@@ -10,8 +10,12 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginVertical="@dimen/margin8"
-        android:layout_marginStart="13dp"
-        android:src="@drawable/placeholder" />
+        android:layout_marginStart="12dp"
+        android:background="@drawable/playlist_player_shape"
+        android:clipToOutline="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/placeholder"
+        tools:ignore="ContentDescription,UnusedAttribute,ImageContrastCheck" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +25,8 @@
         <TextView
             android:id="@+id/tvTitle"
             style="@style/searchTrackFirstTitle"
+            android:layout_marginTop="@dimen/margin14"
+            android:height="20dp"
             tools:text="Playlist title" />
 
         <TextView
@@ -28,6 +34,7 @@
             style="@style/searchTrackSecondTitle"
             android:layout_width="wrap_content"
             android:layout_marginStart="@dimen/margin8"
+            tools:ignore="TextContrastCheck"
             tools:text="123 tracks" />
 
     </LinearLayout>
