--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -218,7 +218,7 @@
     </style>
 
     <style name="TextLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:textColorHint">@color/lightBlack</item>
+        <item name="android:textColorHint">?attr/colorOnPrimary</item>
         <item name="hintTextColor">@color/text_layout_selector</item>
         <item name="boxCornerRadiusBottomEnd">4dp</item>
         <item name="boxCornerRadiusBottomStart">4dp</item>
@@ -230,7 +230,6 @@
 
     <style name="TextEditStyle">
         <item name="android:defaultFocusHighlightEnabled">false</item>
-        <item name="android:textColorHint">@color/black</item>
         <item name="android:maxLines">1</item>
         <item name="android:inputType">text</item>
         <item name="android:ellipsize">end</item>
